Esther updating activity_registration_ui.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,42 +15,40 @@
 
         <LinearLayout
             android:id="@+id/padding"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.2">
-        </LinearLayout> <!--PADDING-->
+            android:layout_weight="0.2"
+            android:orientation="horizontal"></LinearLayout> <!--PADDING-->
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_gravity="center"
-                android:layout_width="300dp"
-                android:layout_height="200dp"
-                android:layout_weight="2"
-                android:background="@null"
-                app:srcCompat="@mipmap/logo"
-                android:contentDescription="@string/appLogoCD"/> <!--logo-->
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:background="@null"
+            android:contentDescription="@string/appLogoCD"
+            app:srcCompat="@mipmap/logo" /> <!--logo-->
 
         <LinearLayout
             android:id="@+id/padding2"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5">
-        </LinearLayout> <!--PADDING-->
+            android:layout_weight="0.5"
+            android:orientation="horizontal"></LinearLayout> <!--PADDING-->
 
         <EditText
             android:id="@+id/usernameET"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="35dp"
             android:background="#11000000"
             android:drawableStart="@drawable/ic_action_user"
             android:ems="10"
             android:hint="@string/usernameHint"
             android:inputType="textPersonName"
-            android:textSize="16sp"
-            android:layout_marginBottom="35dp"/> <!--username-->
+            android:textSize="16sp" /> <!--username-->
 
         <EditText
             android:id="@+id/passwordET"
@@ -61,15 +59,14 @@
             android:drawableStart="@drawable/ic_action_pass"
             android:ems="10"
             android:hint="@string/passwordHint"
-            android:inputType="textPassword"/> <!--password-->
+            android:inputType="textPassword" /> <!--password-->
 
         <LinearLayout
             android:id="@+id/padding3"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5">
-        </LinearLayout> <!--PADDING-->
+            android:layout_weight="0.5"
+            android:orientation="horizontal"></LinearLayout> <!--PADDING-->
 
         <android.support.v7.widget.CardView
             android:id="@+id/loginCV"
@@ -82,28 +79,27 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:background="@null"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@null">
 
                 <TextView
                     android:id="@+id/loginButton"
                     android:layout_width="wrap_content"
-                    android:background="@null"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:textColor="@color/white"
+                    android:background="@null"
                     android:text="@string/loginBtn"
+                    android:textColor="@color/white"
                     android:textSize="18sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView> <!--login button-->
 
         <LinearLayout
             android:id="@+id/padding4"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
-        </LinearLayout> <!--PADDING-->
+            android:layout_weight="1"
+            android:orientation="horizontal"></LinearLayout> <!--PADDING-->
 
     </LinearLayout> <!--logo, username, password and login button-->
 
