--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/PhoneET"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".registrationUI">
+    tools:context=".RegistrationPage">
 
     <LinearLayout
         android:layout_width="match_parent"
