--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/padding"
@@ -28,6 +24,7 @@
             android:layout_gravity="center"
             android:layout_weight="2"
             android:background="@null"
+            android:padding="60dp"
             android:contentDescription="@string/appLogoCD"
             app:srcCompat="@mipmap/logo" /> <!--logo-->
 
@@ -55,6 +52,7 @@
 
         <EditText
             android:id="@+id/passwordET"
+            android:importantForAutofill="no"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
@@ -69,14 +67,15 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
-            android:orientation="horizontal"></LinearLayout> <!--PADDING-->
+            android:orientation="horizontal">
+        </LinearLayout> <!--PADDING-->
 
         <android.support.v7.widget.CardView
             android:id="@+id/loginCV"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            app:cardBackgroundColor="@color/colorAccent"
+            app:cardBackgroundColor="@color/lightBlue"
             app:cardCornerRadius="25dp"
             app:cardElevation="10dp">
 
@@ -103,7 +102,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            app:cardBackgroundColor="@color/lightBlue"
+            app:cardBackgroundColor="@color/colorAccent"
             app:cardCornerRadius="25dp"
             app:cardElevation="10dp">
 
@@ -132,6 +131,4 @@
             android:orientation="horizontal">
         </LinearLayout> <!--PADDING-->
 
-    </LinearLayout> <!--logo, username, password and login button-->
-
-</RelativeLayout>
+</LinearLayout>
